Fix portrait for images that have one dimension smaller than the target dimension

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -569,6 +569,10 @@ select.xxxlarge {
     box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   }
   
+  .thumb-arrow {
+    display: none;
+  }
+  
   div.thumb {
     width: @thumbWidth;
     height: @thumbHeight;
